Estrutra praticamente completa (falta imagens)

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
-	<title>Sedona | Architecture HTML Template</title>
+	<title>Larts Design</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -10,7 +10,7 @@
 	<meta name="description" content="">
 
 	<!-- Google Fonts -->
-	<link href='https://fonts.googleapis.com/css?family=Barlow:400,600%7COpen+Sans:400,400i,700' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap' rel='stylesheet'>
 
 	<!-- Css -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="css/style.css" />
 
 	<!-- Favicons -->
-	<link rel="shortcut icon" href="img/favicon.ico">
+	<link rel="shortcut icon" href="img/favicon-larts.ico">
 	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
@@ -31,7 +31,7 @@
 	<!-- Preloader -->
 	<div class="loader-mask">
 		<div class="loader">
-			"Loading..."
+			"Carregando..."
 		</div>
 	</div>
 
@@ -46,7 +46,8 @@
 						<div class="nav__header">
 							<!-- Logo -->
 							<a href="index.html" class="logo-container flex-child">
-								<img class="logo" src="img/logo.png" srcset="img/logo.png 1x, img/logo@2x.png 2x" alt="logo">
+								<img class="logo" src="img/logo-larts.png" srcset="img/logo-larts.png 1x, img/logo-larts@2x.png 2x"
+									alt="logo">
 							</a>
 
 							<!-- Mobile toggle -->
@@ -64,75 +65,42 @@
 							<ul class="nav__menu">
 								<li class="nav__dropdown active">
 									<a href="index.html" aria-haspopup="true">Início</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
-										aria-expanded="false"></i>
+
 								</li>
 								<li class="nav__dropdown">
 									<a href="services.html" aria-haspopup="true">Serviços</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
-										aria-expanded="false"></i>
+
 								</li>
 								<li class="nav__dropdown">
 									<a href="portfolio.html" aria-haspopup="true">Projetos</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
-										aria-expanded="false"></i>
+
 								</li>
 
 								<li class="nav__dropdown">
 									<a href="about.html" aria-haspopup="true">Sobre</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
-										aria-expanded="false"></i>
-								</li>
-								<!-- <li class="nav__dropdown">
-									<a href="#" aria-haspopup="true">Features</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
-										aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="icons.html">Icons</a></li>
-										<li><a href="elements.html">Elements</a></li>
-									</ul>
-								</li>
-							</ul> end menu -->
-								<div class="nav__phone nav__phone--mobile d-lg-none">
-									<span class="nav__phone-text">Call us:</span>
-									<a href="tel:1-800-995-3959" class="nav__phone-number">1-800-995-3959</a>
-								</div>
 
-								<div class="nav__socials nav__socials--mobile d-lg-none">
-									<div class="socials">
-										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i
-												class="ui-twitter"></i></a>
-										<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i
-												class="ui-facebook"></i></a>
-										<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
-											target="_blank"><i class="ui-youtube"></i></a>
-										<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
-											target="_blank"><i class="ui-instagram"></i></a>
+								</li>
+
+								<div class="dropdown" id="btn-orcamento-mobile">
+									<button class="btn btn--lg btn--color" id="btn-orcamento">Orçamento</button>
+									<div class="dropdown-content">
+										<a href="contact.html">Identidade visual</a>
+										<a href="contact2.html">Design de posts</a>
+										<a href="contact3.html">Criação de sites</a>
+										<a href="contact4.html">Namming</a>
 									</div>
 								</div>
+
 						</nav> <!-- end nav-wrap -->
 
-						<!-- <div class="nav__phone nav--align-right d-none d-lg-block">
-							<span class="nav__phone-text">Call us:</span>
-							<a href="tel:1-800-995-3959" class="nav__phone-number">1-800-995-3959</a>
-						</div>
-
-						<div class="nav__socials d-none d-lg-block">
-							<div class="socials">
-								<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i
-										class="ui-twitter"></i></a>
-								<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i
-										class="ui-facebook"></i></a>
-								<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i
-										class="ui-youtube"></i></a>
-								<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i
-										class="ui-instagram"></i></a>
+						<div class="dropdown" id="btn-orcamento-desktop">
+							<button class="btn btn--lg btn--color" id="btn-orcamento">Orçamento</button>
+							<div class="dropdown-content">
+								<a href="contact.html">Identidade visual</a>
+								<a href="contact2.html">Design de posts</a>
+								<a href="contact3.html">Criação de sites</a>
+								<a href="contact4.html">Namming</a>
 							</div>
-						</div> -->
-						<div>
-							<a href="#" class="btn btn--md btn--color">
-								<span>Orçamento</span>
-							</a>
 						</div>
 
 					</div> <!-- end flex-parent -->
@@ -172,7 +140,7 @@
 									"speed":1000,
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]' data-splitout="none">Modern Living Room<span class="hero-dot">.</span>
+								}]' data-splitout="none">Identidade muito além do visual
 							</div>
 
 							<!-- HERO SUBTITLE -->
@@ -190,7 +158,7 @@
 									"speed":1000,
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]'>The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
+								}]'>The Sedona Theatre is Ireland's largest.
 							</div>
 
 							<!-- BUTTON -->
@@ -207,7 +175,7 @@
 										"speed":1000,
 										"frame":"999",
 										"to":"opacity:0;","ease":"Power3.easeOut"
-									}]'><a href='#' class='btn btn--lg btn--color'>View Project</a>
+									}]'><a href='#' class='btn btn--lg btn--color'>Ver projeto</a>
 							</div>
 
 						</li> <!-- end slide 1 -->
@@ -234,7 +202,7 @@
 									"speed":1000,
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]' data-splitout="none">Astralian Museum<span class="hero-dot">.</span>
+								}]' data-splitout="none">Astralian Museum
 							</div>
 
 							<!-- HERO SUBTITLE -->
@@ -269,7 +237,7 @@
 										"speed":1000,
 										"frame":"999",
 										"to":"opacity:0;","ease":"Power3.easeOut"
-									}]'><a href='#' class='btn btn--lg btn--color'>View Project</a>
+									}]'><a href='#' class='btn btn--lg btn--color'>Ver projeto</a>
 							</div>
 
 						</li> <!-- end slide 1 -->
@@ -331,7 +299,7 @@
 										"speed":1000,
 										"frame":"999",
 										"to":"opacity:0;","ease":"Power3.easeOut"
-									}]'><a href='#' class='btn btn--lg btn--color'>View Project</a>
+									}]'><a href='#' class='btn btn--lg btn--color'>Ver projeto</a>
 							</div>
 
 						</li> <!-- end slide 1 -->
@@ -431,15 +399,14 @@
 					<!-- Filter -->
 					<div class="masonry-filter">
 						<a href="#" class="filter active" data-filter="*">Todos</a>
-						<a href="#" class="filter" data-filter=".residential">Moda</a>
-						<a href="#" class="filter" data-filter=".commercial">Comercial</a>
-						<a href="#" class="filter" data-filter=".interior">Interior</a>
-						<a href="#" class="filter" data-filter=".landscape">Restaurantes</a>
+						<a href="#" class="filter" data-filter=".moda">Moda</a>
+						<a href="#" class="filter" data-filter=".confeitaria">Confeitaria</a>
+						<a href="#" class="filter" data-filter=".restaurante">Restaurantes</a>
 					</div> <!-- end filter -->
 
 					<div class="row masonry-grid">
 
-						<div class="masonry-item col-lg-4 project hover-trigger residential">
+						<div class="masonry-item col-lg-4 project hover-trigger moda">
 							<div class="project__container">
 								<div class="project__img-holder">
 									<a href="portfolio-single.html">
@@ -455,7 +422,7 @@
 							</div>
 						</div> <!-- end project -->
 
-						<div class="masonry-item col-lg-4 project hover-trigger commercial">
+						<div class="masonry-item col-lg-4 project hover-trigger moda">
 							<div class="project__container">
 								<div class="project__img-holder">
 									<a href="portfolio-single.html">
@@ -471,7 +438,7 @@
 							</div>
 						</div> <!-- end project -->
 
-						<div class="masonry-item col-lg-4 project hover-trigger interior">
+						<div class="masonry-item col-lg-4 project hover-trigger confeitaria">
 							<div class="project__container">
 								<div class="project__img-holder">
 									<a href="portfolio-single.html">
@@ -487,7 +454,7 @@
 							</div>
 						</div> <!-- end project -->
 
-						<div class="masonry-item col-lg-4 project hover-trigger landscape">
+						<div class="masonry-item col-lg-4 project hover-trigger restaurante">
 							<div class="project__container">
 								<div class="project__img-holder">
 									<a href="portfolio-single.html">
@@ -509,11 +476,11 @@
 
 
 			<!-- Testimonials -->
-			<section class="section-wrap bg-dark-overlay" style="background-image: url(img/testimonials/bg.jpg);">
+			<section class="section-wrap bg-dark-overlay" style="background-image: url(img/testimonials/bg.png);">
 				<div class="container">
 					<div class="title-row text-center">
 						<p class="subtitle">Conheça o</p>
-						<h2 class="section-title">Feedbak dos clientes</h2>
+						<h2 class="section-title">Feedback dos clientes</h2>
 						<i class="quote">“</i>
 					</div>
 
@@ -677,7 +644,7 @@
 									<p class="subtitle">Que tal construirmos</p>
 									<h2 class="section-title">Uma marca intencional e memorável?</h2>
 									<div>
-										<a href="#" class="btn btn--lg btn--color mt-40">
+										<a href="contact.html" class="btn btn--lg btn--color mt-40">
 											<span>Vamos conversar</span>
 										</a>
 									</div>
@@ -689,10 +656,10 @@
 									<div class="container-fluid text-center text-md-center mt-40">
 										<div class="widget">
 											<div class="socials">
-												<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
-													target="_blank"><i class="ui-instagram"></i></a>
-												<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
-													target="_blank"><i class="ui-behance"></i></a>
+												<a href="https://www.instagram.com/lartsdesign/" class="social social-instagram"
+													aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+												<a href="https://www.behance.net/lartsdesign" class="social social-youtube" aria-label="youtube"
+													title="Behance" target="_blank"><i class="ui-behance"></i></a>
 											</div>
 										</div>
 									</div>
