--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Sedona | Portfolio</title>
+	<title>Larts Design | Projetos</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -10,7 +10,7 @@
 	<meta name="description" content="">
 
 	<!-- Google Fonts -->
-	<link href='https://fonts.googleapis.com/css?family=Barlow:400,600%7COpen+Sans:400,400i,700' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap' rel='stylesheet'>
 
 	<!-- Css -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="css/style.css" />
 
 	<!-- Favicons -->
-	<link rel="shortcut icon" href="img/favicon.ico">
+	<link rel="shortcut icon" href="img/favicon-larts.ico">
 	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
@@ -31,13 +31,12 @@
 	<!-- Preloader -->
 	<div class="loader-mask">
 		<div class="loader">
-			"Loading..."
+			"Carregando..."
 		</div>
 	</div>
 
 	<main class="main-wrapper">
 
-		<!-- Navigation -->
 		<!-- Navigation -->
 		<header class="nav">
 			<div class="nav__holder nav--sticky">
@@ -47,7 +46,8 @@
 						<div class="nav__header">
 							<!-- Logo -->
 							<a href="index.html" class="logo-container flex-child">
-								<img class="logo" src="img/logo.png" srcset="img/logo.png 1x, img/logo@2x.png 2x" alt="logo">
+								<img class="logo" src="img/logo-larts.png" srcset="img/logo-larts.png 1x, img/logo-larts@2x.png 2x"
+									alt="logo">
 							</a>
 
 							<!-- Mobile toggle -->
@@ -63,77 +63,44 @@
 						<!-- Navbar -->
 						<nav id="navbar-collapse" class="nav__wrap collapse navbar-collapse">
 							<ul class="nav__menu">
-								<li class="nav__dropdown">
+								<li class="nav__dropdown active">
 									<a href="index.html" aria-haspopup="true">Início</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
-										aria-expanded="false"></i>
+
 								</li>
 								<li class="nav__dropdown">
 									<a href="services.html" aria-haspopup="true">Serviços</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
-										aria-expanded="false"></i>
+
 								</li>
-								<li class="nav__dropdown active">
+								<li class="nav__dropdown">
 									<a href="portfolio.html" aria-haspopup="true">Projetos</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
-										aria-expanded="false"></i>
+
 								</li>
 
 								<li class="nav__dropdown">
 									<a href="about.html" aria-haspopup="true">Sobre</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
-										aria-expanded="false"></i>
-								</li>
-								<!-- <li class="nav__dropdown">
-									<a href="#" aria-haspopup="true">Features</a>
-									<i class="ui-arrow-down nav__dropdown-trigger" role="button" aria-haspopup="true"
-										aria-expanded="false"></i>
-									<ul class="nav__dropdown-menu">
-										<li><a href="icons.html">Icons</a></li>
-										<li><a href="elements.html">Elements</a></li>
-									</ul>
-								</li>
-							</ul> end menu -->
-								<div class="nav__phone nav__phone--mobile d-lg-none">
-									<span class="nav__phone-text">Call us:</span>
-									<a href="tel:1-800-995-3959" class="nav__phone-number">1-800-995-3959</a>
-								</div>
 
-								<div class="nav__socials nav__socials--mobile d-lg-none">
-									<div class="socials">
-										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i
-												class="ui-twitter"></i></a>
-										<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i
-												class="ui-facebook"></i></a>
-										<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
-											target="_blank"><i class="ui-youtube"></i></a>
-										<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
-											target="_blank"><i class="ui-instagram"></i></a>
+								</li>
+
+								<div class="dropdown" id="btn-orcamento-mobile">
+									<button class="btn btn--lg btn--color" id="btn-orcamento">Orçamento</button>
+									<div class="dropdown-content">
+										<a href="contact.html">Identidade visual</a>
+										<a href="contact2.html">Design de posts</a>
+										<a href="contact3.html">Criação de sites</a>
+										<a href="contact4.html">Namming</a>
 									</div>
 								</div>
+
 						</nav> <!-- end nav-wrap -->
 
-						<!-- <div class="nav__phone nav--align-right d-none d-lg-block">
-							<span class="nav__phone-text">Call us:</span>
-							<a href="tel:1-800-995-3959" class="nav__phone-number">1-800-995-3959</a>
-						</div>
-
-						<div class="nav__socials d-none d-lg-block">
-							<div class="socials">
-								<a href="#" class="social social-twitter" aria-label="twitter" title="twitter" target="_blank"><i
-										class="ui-twitter"></i></a>
-								<a href="#" class="social social-facebook" aria-label="facebook" title="facebook" target="_blank"><i
-										class="ui-facebook"></i></a>
-								<a href="#" class="social social-youtube" aria-label="youtube" title="google plus" target="_blank"><i
-										class="ui-youtube"></i></a>
-								<a href="#" class="social social-instagram" aria-label="instagram" title="instagram" target="_blank"><i
-										class="ui-instagram"></i></a>
+						<div class="dropdown" id="btn-orcamento-desktop">
+							<button class="btn btn--lg btn--color" id="btn-orcamento">Orçamento</button>
+							<div class="dropdown-content">
+								<a href="contact.html">Identidade visual</a>
+								<a href="contact2.html">Design de posts</a>
+								<a href="contact3.html">Criação de sites</a>
+								<a href="contact4.html">Namming</a>
 							</div>
-						</div> -->
-						<div>
-							<a href="#" class="btn btn--md btn--color">
-								<span>Orçamento</span>
-							</a>
 						</div>
 
 					</div> <!-- end flex-parent -->
@@ -147,11 +114,13 @@
 
 			<!-- Page Title -->
 			<section class="page-title bg-dark-overlay text-center"
-				style="background-image: url(img/page-title/portfolio.jpg);">
+				style="background-image: url(img/page-title/services.png);">
 				<div class="container">
 					<div class="page-title__holder">
-						<h1 class="page-title__title">Portfolio</h1>
-						<p class="page-title__subtitle">For each project we establish relationships with partners</p>
+						<h1 class="page-title__title">Explore nossos projetos</h1>
+						<p class="page-title__subtitle">Confira alguns dos nossos projetos e avalie se estão de acordo com o que
+							você procura
+						</p>
 					</div>
 				</div>
 			</section> <!-- end page title -->
@@ -164,7 +133,7 @@
 						<div class="project-1">
 							<div class="project-1__container">
 								<div class="project__img-holder hover-scale">
-									<a href="portfolio-single.html">
+									<a href="dvora.html">
 										<img src="img/portfolio/v-2/1.jpg" alt="" class="project__img">
 									</a>
 								</div>
@@ -172,35 +141,32 @@
 
 							<div class="project-1__description-holder">
 								<div class="project-1__description">
-									<h3 class="project-1__title">Keangnam Grand Hall</h3>
-									<p class="project-1__text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-										sed quia consequuntur magni dolores eos qui ratione
-										voluptatem sequi nesciunt.</p>
-									<a href="portfolio-single.html" class="read-more">
-										<span class="read-more__text">Read More</span>
+									<h3 class="project-1__title">D’vora!</h3>
+									<p class="project-1__text">Cheesecakeria que vai muito além do sabor, mas também
+										é uma homenagem à Débora, mãe do Ricardo, o chefe confeiteiro.</p>
+									<a href="dvora.html" class="read-more">
+										<span class="read-more__text">Leia mais</span>
 										<i class="ui-arrow-right read-more__icon"></i>
 									</a>
 								</div>
 							</div>
 						</div> <!-- end project -->
-
 						<div class="project-1">
 							<div class="project-1__container">
 								<div class="project__img-holder hover-scale">
-									<a href="portfolio-single.html">
+									<a href="caramelo.html">
 										<img src="img/portfolio/v-2/2.jpg" alt="" class="project__img">
 									</a>
 								</div>
 							</div>
-
 							<div class="project-1__description-holder">
 								<div class="project-1__description">
-									<h3 class="project-1__title">Green House</h3>
-									<p class="project-1__text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-										sed quia consequuntur magni dolores eos qui ratione
-										voluptatem sequi nesciunt.</p>
-									<a href="#" class="read-more">
-										<span class="read-more__text">Read More</span>
+									<h3 class="project-1__title">Chocolate Caramelo</h3>
+									<p class="project-1__text">A Chocolate Caramelo é uma empresa que se dedica à produção de milkshakes,
+										sorvetes e outros tipos de doces deliciosos e inovadores.
+									</p>
+									<a href="caramelo.html" class="read-more">
+										<span class="read-more__text">Leia mais</span>
 										<i class="ui-arrow-right read-more__icon"></i>
 									</a>
 								</div>
@@ -210,7 +176,7 @@
 						<div class="project-1">
 							<div class="project-1__container">
 								<div class="project__img-holder hover-scale">
-									<a href="portfolio-single.html">
+									<a href="dulceria.html">
 										<img src="img/portfolio/v-2/3.jpg" alt="" class="project__img">
 									</a>
 								</div>
@@ -218,12 +184,74 @@
 
 							<div class="project-1__description-holder">
 								<div class="project-1__description">
-									<h3 class="project-1__title">Contemporary Villa</h3>
-									<p class="project-1__text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-										sed quia consequuntur magni dolores eos qui ratione
-										voluptatem sequi nesciunt.</p>
-									<a href="#" class="read-more">
-										<span class="read-more__text">Read More</span>
+									<h3 class="project-1__title">Dulcerie</h3>
+									<p class="project-1__text">A Dulcerie é uma empresa que produz bolos festivos e doces, seu foco é
+										proporcionar uma experiência exclusiva para o cliente e sua família e convidados.</p>
+									<a href="dulceria.html" class="read-more">
+										<span class="read-more__text">Leia mais</span>
+										<i class="ui-arrow-right read-more__icon"></i>
+									</a>
+								</div>
+							</div>
+						</div> <!-- end project -->
+
+						<div class="project-1">
+							<div class="project-1__container">
+								<div class="project__img-holder hover-scale">
+									<a href="actio.html">
+										<img src="img/portfolio/v-2/2.jpg" alt="" class="project__img">
+									</a>
+								</div>
+							</div>
+							<div class="project-1__description-holder">
+								<div class="project-1__description">
+									<h3 class="project-1__title">Actio</h3>
+									<p class="project-1__text">A marca Actio é destinada à roupas fitness estilosas, confortáveis, que
+										serve para o dia a dia da mulher moderna.</p>
+									<a href="actio.html" class="read-more">
+										<span class="read-more__text">Leia mais</span>
+										<i class="ui-arrow-right read-more__icon"></i>
+									</a>
+								</div>
+							</div>
+						</div> <!-- end project -->
+						<div class="project-1">
+							<div class="project-1__container">
+								<div class="project__img-holder hover-scale">
+									<a href="koneway.html">
+										<img src="img/portfolio/v-2/3.jpg" alt="" class="project__img">
+									</a>
+								</div>
+							</div>
+
+							<div class="project-1__description-holder">
+								<div class="project-1__description">
+									<h3 class="project-1__title">Koneway</h3>
+									<p class="project-1__text">Koneway é um restaurante de comida japonesa que promove um rodízio tido
+										como dos melhores da cidade, além disso, um sistema à la carte e delivery.</p>
+									<a href="koneway.html" class="read-more">
+										<span class="read-more__text">Leia mais</span>
+										<i class="ui-arrow-right read-more__icon"></i>
+									</a>
+								</div>
+							</div>
+						</div> <!-- end project -->
+						<div class="project-1">
+							<div class="project-1__container">
+								<div class="project__img-holder hover-scale">
+									<a href="piednu.html">
+										<img src="img/portfolio/v-2/2.jpg" alt="" class="project__img">
+									</a>
+								</div>
+							</div>
+							<div class="project-1__description-holder">
+								<div class="project-1__description">
+									<h3 class="project-1__title">Piednu</h3>
+									<p class="project-1__text">A Piednu é especializada em produtos de design de moda, calçados femininos,
+										focada em chinelos flip flop. Desenvolvida para mulheres brasileiras, que tem bom gosto e a
+										feminilidade como life style.</p>
+									<a href="piednu.html" class="read-more">
+										<span class="read-more__text">Leia mais</span>
 										<i class="ui-arrow-right read-more__icon"></i>
 									</a>
 								</div>
@@ -245,7 +273,7 @@
 									<p class="subtitle">Que tal construirmos</p>
 									<h2 class="section-title">Uma marca intencional e memorável?</h2>
 									<div>
-										<a href="#" class="btn btn--lg btn--color mt-40">
+										<a href="contact.html" class="btn btn--lg btn--color mt-40">
 											<span>Vamos conversar</span>
 										</a>
 									</div>
@@ -257,10 +285,10 @@
 									<div class="container-fluid text-center text-md-center mt-40">
 										<div class="widget">
 											<div class="socials">
-												<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
-													target="_blank"><i class="ui-instagram"></i></a>
-												<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
-													target="_blank"><i class="ui-behance"></i></a>
+												<a href="https://www.instagram.com/lartsdesign/" class="social social-instagram"
+													aria-label="instagram" title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+												<a href="https://www.behance.net/lartsdesign" class="social social-youtube" aria-label="youtube"
+													title="Behance" target="_blank"><i class="ui-behance"></i></a>
 											</div>
 										</div>
 									</div>
