Alterações solicitadas por Letícia

--- a/actio.html
+++ b/actio.html
@@ -63,7 +63,7 @@
 						<!-- Navbar -->
 						<nav id="navbar-collapse" class="nav__wrap collapse navbar-collapse">
 							<ul class="nav__menu">
-								<li class="nav__dropdown active">
+								<li class="nav__dropdown">
 									<a href="index.html" aria-haspopup="true">Início</a>
 
 								</li>
@@ -71,7 +71,7 @@
 									<a href="services.html" aria-haspopup="true">Serviços</a>
 
 								</li>
-								<li class="nav__dropdown">
+								<li class="nav__dropdown active">
 									<a href="portfolio.html" aria-haspopup="true">Projetos</a>
 
 								</li>
@@ -273,7 +273,7 @@
 							<div class="blog-grid__title-col d-flex flex-column mb-lg-48">
 								<div class="title-row">
 									<p class="subtitle">Que tal construirmos</p>
-									<h2 class="section-title">Uma marca intencional e memorável?</h2>
+									<h2 class="section-title">Uma marca intencional<br> e memorável?</h2>
 									<div>
 										<a href="contact.html" class="btn btn--lg btn--color mt-40">
 											<span>Vamos conversar</span>
