--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 							<!-- HERO TITLE -->
 							<div class="tp-caption hero-text" data-x="30" data-y="center" data-voffset="[-140,-120,-100,-180]"
-								data-fontsize="[72,62,52,46]" data-lineheight="[72,62,52,46]" data-width="[none, none, none, 300]"
+								data-fontsize="[62,62,52,46]" data-lineheight="[72,62,52,46]" data-width="[none, none, none, 300]"
 								data-whitespace="[nowrap, nowrap, nowrap, normal]" data-frames='[{
 									"delay":1000,
 									"speed":900,
@@ -158,7 +158,7 @@
 									"speed":1000,
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]'>The Sedona Theatre is Ireland's largest.
+								}]'>Com o Larts, sua marca tem credibilidade, consistência e pregnância.
 							</div>
 
 							<!-- BUTTON -->
@@ -175,7 +175,7 @@
 										"speed":1000,
 										"frame":"999",
 										"to":"opacity:0;","ease":"Power3.easeOut"
-									}]'><a href='#' class='btn btn--lg btn--color'>Ver projeto</a>
+									}]'><a href='contact.html' class='btn btn--lg btn--color'>Vamos conversar?</a>
 							</div>
 
 						</li> <!-- end slide 1 -->
@@ -642,7 +642,7 @@
 							<div class="blog-grid__title-col d-flex flex-column mb-lg-48">
 								<div class="title-row">
 									<p class="subtitle">Que tal construirmos</p>
-									<h2 class="section-title">Uma marca intencional e memorável?</h2>
+									<h2 class="section-title">Uma marca intencional<br> e memorável?</h2>
 									<div>
 										<a href="contact.html" class="btn btn--lg btn--color mt-40">
 											<span>Vamos conversar</span>
