--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 						<!-- Navbar -->
 						<nav id="navbar-collapse" class="nav__wrap collapse navbar-collapse">
 							<ul class="nav__menu">
-								<li class="nav__dropdown active">
+								<li class="nav__dropdown">
 									<a href="index.html" aria-haspopup="true">Início</a>
 
 								</li>
@@ -76,7 +76,7 @@
 
 								</li>
 
-								<li class="nav__dropdown">
+								<li class="nav__dropdown active">
 									<a href="about.html" aria-haspopup="true">Sobre</a>
 
 								</li>
@@ -146,7 +146,7 @@
 					<div class="row justify-content-center">
 						<div class="col-md-3">
 							<div class="statistic">
-								<span class="statistic__number">4</span>
+								<span class="statistic__number">+3</span>
 								<h5 class="statistic__title">anos de experiência</h5>
 							</div>
 						</div>
@@ -225,7 +225,7 @@
 								<div class="blog-grid__title-col d-flex flex-column mb-lg-48">
 									<div class="title-row">
 										<p class="subtitle">Que tal construirmos</p>
-										<h2 class="section-title">Uma marca intencional e memorável?</h2>
+										<h2 class="section-title">Uma marca intencional<br> e memorável?</h2>
 										<div>
 											<a href="contact.html" class="btn btn--lg btn--color mt-40">
 												<span>Vamos conversar</span>
