--- a/contact4.html
+++ b/contact4.html
@@ -64,7 +64,7 @@
 						<!-- Navbar -->
 						<nav id="navbar-collapse" class="nav__wrap collapse navbar-collapse">
 							<ul class="nav__menu">
-								<li class="nav__dropdown active">
+								<li class="nav__dropdown">
 									<a href="index.html" aria-haspopup="true">Início</a>
 
 								</li>
