Alteração serviços e headline

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 									"speed":1000,
 									"frame":"999",
 									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]' data-splitout="none">Identidade muito além do visual
+									}]' data-splitout="none">Identidade muito <br> além do visual
 							</div>
 
 							<!-- HERO SUBTITLE -->
@@ -336,7 +336,7 @@
 			<section class="section-wrap intro pb-40">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-6 mt-80">
+						<div class="col-lg-6">
 							<p class="subtitle">Como funciona?</p>
 							<h2 class="intro__title" id="services-title">Soluções únicas para empresas únicas</h2>
 							<p>Criamos um método para auxiliar na criação de projetos de identidade visual de maneira colaborativa.
@@ -355,14 +355,16 @@
 									<div class="feature">
 										<i class="icon-Book-Write feature__icon"></i>
 										<h4 class="feature__title">Imersão</h4>
-										<p>Coleta de todas as informações para a criação do projeto e seus desdobramentos.</p>
+										<p>Coleta das informações para a criação do projeto e seus desdobramentos.
+										</p>
 									</div>
 								</div>
 								<div class="col-sm-6">
 									<div class="feature">
 										<i class="icon-Light-Bulb feature__icon"></i>
 										<h4 class="feature__title">Ideação</h4>
-										<p>Definição dos arquétipos da marca, que guiarão a construção da identidade visual.</p>
+										<p>Definição dos bastidores da marca, que guiarão a construção.
+										</p>
 									</div>
 								</div>
 							</div>
@@ -371,14 +373,14 @@
 									<div class="feature">
 										<i class="icon-Theme	feature__icon"></i>
 										<h4 class="feature__title">Complementação</h4>
-										<p>Criação dos itens relacionados à nova marca, como: papelaria, embalagens e artes digitais.</p>
+										<p>Criação dos itens adicionais, como papelaria e outras artes.</p>
 									</div>
 								</div>
 								<div class="col-sm-6">
 									<div class="feature">
 										<i class="icon-Wrench-1	feature__icon"></i>
 										<h4 class="feature__title">Finalização</h4>
-										<p>O projeto é cuidadosamente organizado para o uso pelo cliente seja intuitivo.
+										<p>Organização cuidadosa do projeto para um uso intuitivo.
 										</p>
 									</div>
 								</div>
