remoção de imagens base

--- a/dvora.html
+++ b/dvora.html
@@ -115,7 +115,7 @@
 			<!-- Portfolio Single -->
 			<div class="slick-slider slick-single-image">
 				<!-- <img src="img/portfolio/dvora1.png" class="project__featured-img" alt=""> -->
-				<img src="img/portfolio/dvora2.png" class="project__featured-img" alt="">
+				<img src="img/portfolio/featured.jpg" class="project__featured-img" alt="">
 				<!-- <img src="img/portfolio/dvora3.png" class="project__featured-img" alt=""> -->
 			</div>
 
