add projeto actio

--- a/actio.html
+++ b/actio.html
@@ -20,9 +20,6 @@
 
 	<!-- Favicons -->
 	<link rel="shortcut icon" href="img/favicon-larts.ico">
-	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
 
 </head>
 
@@ -114,9 +111,9 @@
 
 			<!-- Portfolio Single -->
 			<div class="slick-slider slick-single-image">
-				<!-- <img src="img/portfolio/dvora1.png" class="project__featured-img" alt=""> -->
-				<img src="img/portfolio/actio.png" class="project__featured-img" alt="">
-				<!-- <img src="img/portfolio/dvora3.png" class="project__featured-img" alt=""> -->
+				<img src="img/portfolio/actio/slide1.png" class="project__featured-img" alt="">
+				<img src="img/portfolio/actio/slide2.png" class="project__featured-img" alt="">
+				<img src="img/portfolio/actio/slide3.png" class="project__featured-img" alt="">
 			</div>
 
 			<section class="section-wrap pt-72 pb-32">
@@ -162,24 +159,24 @@
 							<div class="gallery gallery-size-large">
 								<figure class="gallery-item">
 									<div class="gallery-icon landscape">
-										<img src="img/portfolio/21.png" class="attachment-large size-large" alt="">
+										<img src="img/portfolio/actio/corpo1.png" class="attachment-large size-large" alt="">
 									</div>
 								</figure>
 								<figure class="gallery-item">
 									<div class="gallery-icon landscape">
-										<img src="img/portfolio/17.png" class="attachment-large size-large" alt="">
+										<img src="img/portfolio/actio/corpo2.png" class="attachment-large size-large" alt="">
 									</div>
 								</figure>
 							</div>
 							<div class="gallery gallery-size-large">
 								<figure class="gallery-item">
 									<div class="gallery-icon landscape">
-										<img src="img/portfolio/11.png" class="attachment-large size-large" alt="">
+										<img src="img/portfolio/actio/corpo3.png" class="attachment-large size-large" alt="">
 									</div>
 								</figure>
 								<figure class="gallery-item">
 									<div class="gallery-icon landscape">
-										<img src="img/portfolio/12.png" class="attachment-large size-large" alt="">
+										<img src="img/portfolio/actio/corpo4.png" class="attachment-large size-large" alt="">
 									</div>
 								</figure>
 							</div>
