--- a/portfolio.html
+++ b/portfolio.html
@@ -199,7 +199,7 @@
 							<div class="project-1__container">
 								<div class="project__img-holder hover-scale">
 									<a href="actio.html">
-										<img src="img/portfolio/v-2/2.jpg" alt="" class="project__img">
+										<img src="img/portfolio/actio/pag-projetos.png" alt="" class="project__img">
 									</a>
 								</div>
 							</div>
