--- a/actio.html
+++ b/actio.html
@@ -211,11 +211,11 @@
 						<div class="masonry-item col-lg-4 project hover-trigger commercial">
 							<div class="project__container">
 								<div class="project__img-holder">
-									<a href="portfolio-single.html">
-										<img src="img/portfolio/2.jpg" alt="" class="project__img">
+									<a href="labesbiotech.html">
+										<img src="img/portfolio/labesbiotech/Projetos relacionados@3x.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
-												<h3 class="project__title">Piednu</h3>
+												<h3 class="project__title">LabES Biotech</h3>
 												<span class="project__date">2022</span>
 											</div>
 										</div>
@@ -227,11 +227,11 @@
 						<div class="masonry-item col-lg-4 project hover-trigger interior">
 							<div class="project__container">
 								<div class="project__img-holder">
-									<a href="portfolio-single.html">
-										<img src="img/portfolio/3.jpg" alt="" class="project__img">
+									<a href="pretihome.html">
+										<img src="img/portfolio/preti-home/Projetos relacionados@3x.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
-												<h3 class="project__title">Koneway</h3>
+												<h3 class="project__title">Preti Home</h3>
 												<span class="project__date">2022</span>
 											</div>
 										</div>
@@ -243,11 +243,11 @@
 						<div class="masonry-item col-lg-4 project hover-trigger landscape">
 							<div class="project__container">
 								<div class="project__img-holder">
-									<a href="portfolio-single.html">
-										<img src="img/portfolio/4.jpg" alt="" class="project__img">
+									<a href="thomaz.html">
+										<img src="img/portfolio/thomaz/Projetos relacionados@3x.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
-												<h3 class="project__title">D'vora</h3>
+												<h3 class="project__title">Thomaz</h3>
 												<span class="project__date">2023</span>
 											</div>
 										</div>
