--- a/portfolio.html
+++ b/portfolio.html
@@ -133,61 +133,19 @@
 						<div class="project-1">
 							<div class="project-1__container">
 								<div class="project__img-holder hover-scale">
-									<a href="dvora.html">
-										<img src="img/portfolio/v-2/1.jpg" alt="" class="project__img">
+									<a href="labesbiotech.html">
+										<img src="img/portfolio/labesbiotech/Página de projetos — Geral@3x.png" alt="" class="project__img">
 									</a>
 								</div>
 							</div>
 
 							<div class="project-1__description-holder">
 								<div class="project-1__description">
-									<h3 class="project-1__title">D’vora!</h3>
-									<p class="project-1__text">Cheesecakeria que vai muito além do sabor, mas também
-										é uma homenagem à Débora, mãe do Ricardo, o chefe confeiteiro.</p>
-									<a href="dvora.html" class="read-more">
-										<span class="read-more__text">Leia mais</span>
-										<i class="ui-arrow-right read-more__icon"></i>
-									</a>
-								</div>
-							</div>
-						</div> <!-- end project -->
-						<div class="project-1">
-							<div class="project-1__container">
-								<div class="project__img-holder hover-scale">
-									<a href="caramelo.html">
-										<img src="img/portfolio/v-2/2.jpg" alt="" class="project__img">
-									</a>
-								</div>
-							</div>
-							<div class="project-1__description-holder">
-								<div class="project-1__description">
-									<h3 class="project-1__title">Chocolate Caramelo</h3>
-									<p class="project-1__text">A Chocolate Caramelo é uma empresa que se dedica à produção de milkshakes,
-										sorvetes e outros tipos de doces deliciosos e inovadores.
-									</p>
-									<a href="caramelo.html" class="read-more">
-										<span class="read-more__text">Leia mais</span>
-										<i class="ui-arrow-right read-more__icon"></i>
-									</a>
-								</div>
-							</div>
-						</div> <!-- end project -->
-
-						<div class="project-1">
-							<div class="project-1__container">
-								<div class="project__img-holder hover-scale">
-									<a href="dulceria.html">
-										<img src="img/portfolio/v-2/3.jpg" alt="" class="project__img">
-									</a>
-								</div>
-							</div>
-
-							<div class="project-1__description-holder">
-								<div class="project-1__description">
-									<h3 class="project-1__title">Dulcerie</h3>
-									<p class="project-1__text">A Dulcerie é uma empresa que produz bolos festivos e doces, seu foco é
-										proporcionar uma experiência exclusiva para o cliente e sua família e convidados.</p>
-									<a href="dulceria.html" class="read-more">
+									<h3 class="project-1__title">LabES Biotech</h3>
+									<p class="project-1__text">A LabES Biotech objetiva conectar a
+										cadeia produtiva da sapucaia, produzindo novos princípios e desenvolvendo
+										novos usos para bioativos naturais.</p>
+									<a href="labesbiotech.html" class="read-more">
 										<span class="read-more__text">Leia mais</span>
 										<i class="ui-arrow-right read-more__icon"></i>
 									</a>
@@ -215,51 +173,54 @@
 								</div>
 							</div>
 						</div> <!-- end project -->
-						<div class="project-1">
-							<div class="project-1__container">
-								<div class="project__img-holder hover-scale">
-									<a href="koneway.html">
-										<img src="img/portfolio/v-2/3.jpg" alt="" class="project__img">
-									</a>
-								</div>
-							</div>
 
-							<div class="project-1__description-holder">
-								<div class="project-1__description">
-									<h3 class="project-1__title">Koneway</h3>
-									<p class="project-1__text">Koneway é um restaurante de comida japonesa que promove um rodízio tido
-										como dos melhores da cidade, além disso, um sistema à la carte e delivery.</p>
-									<a href="koneway.html" class="read-more">
-										<span class="read-more__text">Leia mais</span>
-										<i class="ui-arrow-right read-more__icon"></i>
-									</a>
+						<div class="projects">
+							<div class="project-1">
+								<div class="project-1__container">
+									<div class="project__img-holder hover-scale">
+										<a href="pretihome.html">
+											<img src="img/portfolio/preti-home/Página de projetos — Geral@3x.png" alt="" class="project__img">
+										</a>
+									</div>
 								</div>
-							</div>
-						</div> <!-- end project -->
-						<div class="project-1">
-							<div class="project-1__container">
-								<div class="project__img-holder hover-scale">
-									<a href="piednu.html">
-										<img src="img/portfolio/v-2/2.jpg" alt="" class="project__img">
-									</a>
+
+								<div class="project-1__description-holder">
+									<div class="project-1__description">
+										<h3 class="project-1__title">Preti Home</h3>
+										<p class="project-1__text">A Preti Home é uma empresa que celebra o lar com personalidade e amor,
+											criando peças de decoração sofisticadas que elevam a energia do ambiente.</p>
+										<a href="pretihome.html" class="read-more">
+											<span class="read-more__text">Leia mais</span>
+											<i class="ui-arrow-right read-more__icon"></i>
+										</a>
+									</div>
 								</div>
-							</div>
-							<div class="project-1__description-holder">
-								<div class="project-1__description">
-									<h3 class="project-1__title">Piednu</h3>
-									<p class="project-1__text">A Piednu é especializada em produtos de design de moda, calçados femininos,
-										focada em chinelos flip flop. Desenvolvida para mulheres brasileiras, que tem bom gosto e a
-										feminilidade como life style.</p>
-									<a href="piednu.html" class="read-more">
-										<span class="read-more__text">Leia mais</span>
-										<i class="ui-arrow-right read-more__icon"></i>
-									</a>
+							</div> <!-- end project -->
+
+
+							<div class="project-1">
+								<div class="project-1__container">
+									<div class="project__img-holder hover-scale">
+										<a href="thomaz.html">
+											<img src="img/portfolio/thomaz/Página de projetos — Geral@3x.png" alt="" class="project__img">
+										</a>
+									</div>
 								</div>
-							</div>
-						</div> <!-- end project -->
+								<div class="project-1__description-holder">
+									<div class="project-1__description">
+										<h3 class="project-1__title">Thomaz</h3>
+										<p class="project-1__text">O Espaço Thomaz é um lugar que tem uma atmosfera única e acolhedora, que
+											se deve em parte ao fato de que a fazenda é de propriedade da mesma família há gerações.</p>
+										<a href="thomaz.html" class="read-more">
+											<span class="read-more__text">Leia mais</span>
+											<i class="ui-arrow-right read-more__icon"></i>
+										</a>
+									</div>
+								</div>
+							</div> <!-- end project -->
+						</div>
+
 					</div>
-
-				</div>
 			</section> <!-- end portfolio -->
 
 
