--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 						<li data-fstransition="fade" data-transition="fade" data-easein="default" data-easeout="default"
 							data-slotamount="1" data-masterspeed="1200" data-delay="8000" data-title="Modern Living Room">
 							<!-- MAIN IMAGE -->
-							<img src="img/revolution/home-1/1.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
+							<img src="img/revolution/home-1/Capa 1080x1920.png" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
 								data-bgparallax="7" class="rev-slidebg">
 
 							<!-- HERO TITLE -->
@@ -179,131 +179,6 @@
 							</div>
 
 						</li> <!-- end slide 1 -->
-
-						<!-- SLIDE 2 -->
-						<li data-fstransition="fade" data-transition="fade" data-easein="default" data-easeout="default"
-							data-slotamount="1" data-masterspeed="1200" data-delay="8000" data-title="Astralian Museum">
-							<!-- MAIN IMAGE -->
-							<img src="img/revolution/home-1/2.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
-								data-bgparallax="7" class="rev-slidebg">
-
-							<!-- HERO TITLE -->
-							<div class="tp-caption hero-text" data-x="30" data-y="center" data-voffset="[-140,-120,-100,-180]"
-								data-fontsize="[72,62,52,46]" data-lineheight="[72,62,52,46]" data-width="[none, none, none, 300]"
-								data-whitespace="[nowrap, nowrap, nowrap, normal]" data-frames='[{
-									"delay":1000,
-									"speed":900,
-									"frame":"0",
-									"from":"y:150px;opacity:0;",
-									"ease":"Power3.easeOut",
-									"to":"o:1;"
-									},{
-									"delay":"wait",
-									"speed":1000,
-									"frame":"999",
-									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]' data-splitout="none">Astralian Museum
-							</div>
-
-							<!-- HERO SUBTITLE -->
-							<div class="tp-caption small-text" data-x="30" data-y="center" data-voffset="[-40,-30,-20,0]"
-								data-fontsize="[21,21,21,21]" data-lineheight="34" data-width="[none, none, none, 300]"
-								data-whitespace="[nowrap, nowrap, nowrap, normal]" data-frames='[{
-									"delay":1100,
-									"speed":900,
-									"frame":"0",
-									"from":"y:150px;opacity:0;",
-									"ease":"Power3.easeOut",
-									"to":"o:1;"
-									},{
-									"delay":"wait",
-									"speed":1000,
-									"frame":"999",
-									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]'>The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
-							</div>
-
-							<!-- BUTTON -->
-							<div class="tp-caption" data-x="30" data-y="center" data-voffset="[60,60,60,100]" data-lineheight="55"
-								data-hoffset="0" data-frames='[{
-										"delay":1200,
-										"speed":900,
-										"frame":"0",
-										"from":"y:150px;opacity:0;",
-										"ease":"Power3.easeOut",
-										"to":"o:1;"
-										},{
-										"delay":"wait",
-										"speed":1000,
-										"frame":"999",
-										"to":"opacity:0;","ease":"Power3.easeOut"
-									}]'><a href='#' class='btn btn--lg btn--color'>Ver projeto</a>
-							</div>
-
-						</li> <!-- end slide 1 -->
-
-						<!-- SLIDE 3 -->
-						<li data-fstransition="fade" data-transition="fade" data-easein="default" data-easeout="default"
-							data-slotamount="1" data-masterspeed="1200" data-delay="8000" data-title="Horizon Urban">
-							<!-- MAIN IMAGE -->
-							<img src="img/revolution/home-1/3.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover"
-								data-bgparallax="7" class="rev-slidebg">
-
-							<!-- HERO TITLE -->
-							<div class="tp-caption hero-text" data-x="30" data-y="center" data-voffset="[-140,-120,-100,-180]"
-								data-fontsize="[72,62,52,46]" data-lineheight="[72,62,52,46]" data-width="[none, none, none, 300]"
-								data-whitespace="[nowrap, nowrap, nowrap, normal]" data-frames='[{
-									"delay":1000,
-									"speed":900,
-									"frame":"0",
-									"from":"y:150px;opacity:0;",
-									"ease":"Power3.easeOut",
-									"to":"o:1;"
-									},{
-									"delay":"wait",
-									"speed":1000,
-									"frame":"999",
-									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]' data-splitout="none">Horizon Urban<span class="hero-dot">.</span>
-							</div>
-
-							<!-- HERO SUBTITLE -->
-							<div class="tp-caption small-text" data-x="30" data-y="center" data-voffset="[-40,-30,-20,0]"
-								data-fontsize="[21,21,21,21]" data-lineheight="34" data-width="[none, none, none, 300]"
-								data-whitespace="[nowrap, nowrap, nowrap, normal]" data-frames='[{
-									"delay":1100,
-									"speed":900,
-									"frame":"0",
-									"from":"y:150px;opacity:0;",
-									"ease":"Power3.easeOut",
-									"to":"o:1;"
-									},{
-									"delay":"wait",
-									"speed":1000,
-									"frame":"999",
-									"to":"opacity:0;","ease":"Power3.easeOut"
-								}]'>The Sedona Theatre is Ireland's largest fixed-seat theatre.<br>It's located in Grand Canal Square, Dublin.
-							</div>
-
-							<!-- BUTTON -->
-							<div class="tp-caption" data-x="30" data-y="center" data-voffset="[60,60,60,100]" data-lineheight="55"
-								data-hoffset="0" data-frames='[{
-										"delay":1200,
-										"speed":900,
-										"frame":"0",
-										"from":"y:150px;opacity:0;",
-										"ease":"Power3.easeOut",
-										"to":"o:1;"
-										},{
-										"delay":"wait",
-										"speed":1000,
-										"frame":"999",
-										"to":"opacity:0;","ease":"Power3.easeOut"
-									}]'><a href='#' class='btn btn--lg btn--color'>Ver projeto</a>
-							</div>
-
-						</li> <!-- end slide 1 -->
-
 					</ul>
 				</div>
 			</div>
@@ -411,12 +286,12 @@
 						<div class="masonry-item col-lg-4 project hover-trigger moda">
 							<div class="project__container">
 								<div class="project__img-holder">
-									<a href="portfolio-single.html">
-										<img src="img/portfolio/masonry/piednu.png" alt="" class="project__img">
+									<a href="labesbiotech.html">
+										<img src="img/portfolio/labesbiotech/Home — Vertical@3x.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
-												<h3 class="project__title">Piednu</h3>
-												<span class="project__date">Flats & Sandals</span>
+												<h3 class="project__title">LabES Biotech</h3>
+												<span class="project__date">Ciência</span>
 											</div>
 										</div>
 									</a>
@@ -427,7 +302,7 @@
 						<div class="masonry-item col-lg-4 project hover-trigger moda">
 							<div class="project__container">
 								<div class="project__img-holder">
-									<a href="portfolio-single.html">
+									<a href="actio.html">
 										<img src="img/portfolio/actio/home-actio.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
@@ -443,12 +318,12 @@
 						<div class="masonry-item col-lg-4 project hover-trigger confeitaria">
 							<div class="project__container">
 								<div class="project__img-holder">
-									<a href="portfolio-single.html">
-										<img src="img/portfolio/masonry/caramelo.png" alt="" class="project__img">
+									<a href="pretihome.html">
+										<img src="img/portfolio/preti-home/Home — Horizontal@3x.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
-												<h3 class="project__title">Chocolate Caramelo</h3>
-												<span class="project__date">Food Truck</span>
+												<h3 class="project__title">Preti Home</h3>
+												<span class="project__date">Home Decor</span>
 											</div>
 										</div>
 									</a>
@@ -459,12 +334,12 @@
 						<div class="masonry-item col-lg-4 project hover-trigger restaurante">
 							<div class="project__container">
 								<div class="project__img-holder">
-									<a href="portfolio-single.html">
-										<img src="img/portfolio/masonry/koneway.png" alt="" class="project__img">
+									<a href="thomaz.html">
+										<img src="img/portfolio/thomaz/Home — Horizontal@3x.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
-												<h3 class="project__title">Koneway</h3>
-												<span class="project__date">Restaurante</span>
+												<h3 class="project__title">Thomaz</h3>
+												<span class="project__date">Cerimonial</span>
 											</div>
 										</div>
 									</a>
