--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 								data-bgparallax="7" class="rev-slidebg">
 
 							<!-- HERO TITLE -->
-							<div class="tp-caption hero-text" data-x="30" data-y="center" data-voffset="[-140,-120,-100,-180]"
+							<div class="tp-caption hero-text" data-x="30" data-y="200" data-voffset="[-140,-120,-100,-180]"
 								data-fontsize="[62,62,52,46]" data-lineheight="[72,62,52,46]" data-width="[none, none, none, 300]"
 								data-whitespace="[nowrap, nowrap, nowrap, normal]" data-frames='[{
 									"delay":1000,
@@ -144,7 +144,7 @@
 							</div>
 
 							<!-- HERO SUBTITLE -->
-							<div class="tp-caption small-text" data-x="30" data-y="center" data-voffset="[-40,-30,-20,0]"
+							<div class="tp-caption small-text" data-x="30" data-y="360" data-voffset="[-40,-30,-20,0]"
 								data-fontsize="[21,21,21,21]" data-lineheight="34" data-width="[none, none, none, 300]"
 								data-whitespace="[nowrap, nowrap, nowrap, normal]" data-frames='[{
 									"delay":1100,
@@ -162,7 +162,7 @@
 							</div>
 
 							<!-- BUTTON -->
-							<div class="tp-caption" data-x="30" data-y="center" data-voffset="[60,60,60,100]" data-lineheight="55"
+							<div class="tp-caption" data-x="30" data-y="430" data-voffset="[60,60,60,100]" data-lineheight="55"
 								data-hoffset="0" data-frames='[{
 										"delay":1200,
 										"speed":900,
@@ -188,7 +188,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-6">
-							<img src="img/intro/lets.png" class="img-full-width" alt="">
+							<img src="img/intro/sobre.png" class="img-full-width" alt="">
 						</div>
 						<div class="col-lg-5" id="sobre-nos">
 							<p class="subtitle">Sobre nós</p>
@@ -274,12 +274,12 @@
 					</div>
 
 					<!-- Filter -->
-					<div class="masonry-filter">
+					<!-- <div class="masonry-filter">
 						<a href="#" class="filter active" data-filter="*">Todos</a>
 						<a href="#" class="filter" data-filter=".moda">Moda</a>
 						<a href="#" class="filter" data-filter=".confeitaria">Confeitaria</a>
 						<a href="#" class="filter" data-filter=".restaurante">Restaurantes</a>
-					</div> <!-- end filter -->
+					</div> end filter -->
 
 					<div class="row masonry-grid">
 
