--- a/services.html
+++ b/services.html
@@ -113,8 +113,7 @@
 		<div class="content-wrapper content-wrapper--boxed oh">
 
 			<!-- Page Title -->
-			<section class="page-title bg-dark-overlay text-center"
-				style="background-image: url(img/page-title/services.png);">
+			<section class="page-title bg-dark-overlay text-center" style="background-image: url(img/page-title/capa2.png);">
 				<div class="container">
 					<div class="page-title__holder">
 						<h1 class="page-title__title">Serviços</h1>
