Mundaças para subir em prod

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 							<div class="project__container">
 								<div class="project__img-holder">
 									<a href="labesbiotech.html">
-										<img src="img/portfolio/labesbiotech/Home — Vertical@3x.png" alt="" class="project__img">
+										<img src="img/portfolio/labesbiotech/home.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
 												<h3 class="project__title">LabES Biotech</h3>
@@ -319,7 +319,7 @@
 							<div class="project__container">
 								<div class="project__img-holder">
 									<a href="pretihome.html">
-										<img src="img/portfolio/preti-home/Home — Horizontal@3x.png" alt="" class="project__img">
+										<img src="img/portfolio/preti-home/home.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
 												<h3 class="project__title">Preti Home</h3>
@@ -335,7 +335,7 @@
 							<div class="project__container">
 								<div class="project__img-holder">
 									<a href="thomaz.html">
-										<img src="img/portfolio/thomaz/Home — Horizontal@3x.png" alt="" class="project__img">
+										<img src="img/portfolio/thomaz/home.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
 												<h3 class="project__title">Thomaz</h3>
