--- a/portfolio.html
+++ b/portfolio.html
@@ -133,7 +133,7 @@
 							<div class="project-1__container">
 								<div class="project__img-holder hover-scale">
 									<a href="labesbiotech.html">
-										<img src="img/portfolio/labesbiotech/Página de projetos — Geral@3x.png" alt="" class="project__img">
+										<img src="img/portfolio/labesbiotech/pg_projetos.png" alt="" class="project__img">
 									</a>
 								</div>
 							</div>
@@ -178,7 +178,7 @@
 								<div class="project-1__container">
 									<div class="project__img-holder hover-scale">
 										<a href="pretihome.html">
-											<img src="img/portfolio/preti-home/Página de projetos — Geral@3x.png" alt="" class="project__img">
+											<img src="img/portfolio/preti-home/pg_projetos.png" alt="" class="project__img">
 										</a>
 									</div>
 								</div>
@@ -201,7 +201,7 @@
 								<div class="project-1__container">
 									<div class="project__img-holder hover-scale">
 										<a href="thomaz.html">
-											<img src="img/portfolio/thomaz/Página de projetos — Geral@3x.png" alt="" class="project__img">
+											<img src="img/portfolio/thomaz/pg_projetos.png" alt="" class="project__img">
 										</a>
 									</div>
 								</div>
