--- a/pretihome.html
+++ b/pretihome.html
@@ -114,9 +114,9 @@
 
 			<!-- Portfolio Single -->
 			<div class="slick-slider slick-single-image">
-				<img src="img/portfolio/preti-home/Slide — Projeto@3x.png" class="project__featured-img" alt="">
-				<img src="img/portfolio/preti-home/Slide — Projeto_1@3x.png" class="project__featured-img" alt="">
-				<img src="img/portfolio/preti-home/Slide — Projeto_2@3x.png" class="project__featured-img" alt="">
+				<img src="img/portfolio/preti-home/slide1.png" class="project__featured-img" alt="">
+				<img src="img/portfolio/preti-home/slide2.png" class="project__featured-img" alt="">
+				<img src="img/portfolio/preti-home/slide3.png" class="project__featured-img" alt="">
 			</div>
 
 			<section class="section-wrap pt-72 pb-32">
@@ -154,28 +154,24 @@
 							<div class="gallery gallery-size-large">
 								<figure class="gallery-item">
 									<div class="gallery-icon landscape">
-										<img src="img/portfolio/preti-home/Conteúdo — Projeto@3x.png" class="attachment-large size-large"
-											alt="">
+										<img src="img/portfolio/preti-home/conteudo1.png" class="attachment-large size-large" alt="">
 									</div>
 								</figure>
 								<figure class="gallery-item">
 									<div class="gallery-icon landscape">
-										<img src="img/portfolio/preti-home/Conteúdo — Projeto_1@3x.png" class="attachment-large size-large"
-											alt="">
+										<img src="img/portfolio/preti-home/conteudo2.png" class="attachment-large size-large" alt="">
 									</div>
 								</figure>
 							</div>
 							<div class="gallery gallery-size-large">
 								<figure class="gallery-item">
 									<div class="gallery-icon landscape">
-										<img src="img/portfolio/preti-home/Conteúdo — Projeto_2@3x.png" class="attachment-large size-large"
-											alt="">
+										<img src="img/portfolio/preti-home/conteudo3.png" class="attachment-large size-large" alt="">
 									</div>
 								</figure>
 								<figure class="gallery-item">
 									<div class="gallery-icon landscape">
-										<img src="img/portfolio/preti-home/Conteúdo — Projeto_3@3x.png" class="attachment-large size-large"
-											alt="">
+										<img src="img/portfolio/preti-home/conteudo4.png" class="attachment-large size-large" alt="">
 									</div>
 								</figure>
 							</div>
@@ -211,7 +207,7 @@
 							<div class="project__container">
 								<div class="project__img-holder">
 									<a href="labesbiotech.html">
-										<img src="img/portfolio/labesbiotech/Projetos relacionados@3x.png" alt="" class="project__img">
+										<img src="img/portfolio/labesbiotech/projetos_relacionados.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
 												<h3 class="project__title">LabES Biotech</h3>
@@ -243,7 +239,7 @@
 							<div class="project__container">
 								<div class="project__img-holder">
 									<a href="thomaz.html">
-										<img src="img/portfolio/thomaz/Projetos relacionados@3x.png" alt="" class="project__img">
+										<img src="img/portfolio/thomaz/projeto_relacionados.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
 												<h3 class="project__title">Thomaz</h3>
