--- a/labesbiotech.html
+++ b/labesbiotech.html
@@ -115,8 +115,8 @@
 			<!-- Portfolio Single -->
 			<div class="slick-slider slick-single-image">
 				<img src="img/portfolio/labesbiotech/slide1.png" class="project__featured-img" alt="">
-				<img src="img/portfolio/labesbiotech/Slide — Projeto_1@3x.png" class="project__featured-img" alt="">
-				<img src="img/portfolio/labesbiotech/Slide — Projeto_2@3x.png" class="project__featured-img" alt="">
+				<img src="img/portfolio/labesbiotech/slide2.png" class="project__featured-img" alt="">
+				<img src="img/portfolio/labesbiotech/slide3.png" class="project__featured-img" alt="">
 			</div>
 
 			<section class="section-wrap pt-72 pb-32">
@@ -166,28 +166,24 @@
 							<div class="gallery gallery-size-large">
 								<figure class="gallery-item">
 									<div class="gallery-icon landscape">
-										<img src="img/portfolio/labesbiotech/Conteúdo — Projeto@3x.png" class="attachment-large size-large"
-											alt="">
+										<img src="img/portfolio/labesbiotech/conteudo1.png" class="attachment-large size-large" alt="">
 									</div>
 								</figure>
 								<figure class="gallery-item">
 									<div class="gallery-icon landscape">
-										<img src="img/portfolio/labesbiotech/Conteúdo — Projeto_1@3x.png"
-											class="attachment-large size-large" alt="">
+										<img src="img/portfolio/labesbiotech/conteudo2.png" class="attachment-large size-large" alt="">
 									</div>
 								</figure>
 							</div>
 							<div class="gallery gallery-size-large">
 								<figure class="gallery-item">
 									<div class="gallery-icon landscape">
-										<img src="img/portfolio/labesbiotech/Conteúdo — Projeto_2@3x.png"
-											class="attachment-large size-large" alt="">
+										<img src="img/portfolio/labesbiotech/conteudo3.png" class="attachment-large size-large" alt="">
 									</div>
 								</figure>
 								<figure class="gallery-item">
 									<div class="gallery-icon landscape">
-										<img src="img/portfolio/labesbiotech/Conteúdo — Projeto_3@3x.png"
-											class="attachment-large size-large" alt="">
+										<img src="img/portfolio/labesbiotech/conteudo4.png" class="attachment-large size-large" alt="">
 									</div>
 								</figure>
 							</div>
@@ -223,7 +219,7 @@
 							<div class="project__container">
 								<div class="project__img-holder">
 									<a href="pretihome.html">
-										<img src="img/portfolio/preti-home/Projetos relacionados@3x.png" alt="" class="project__img">
+										<img src="img/portfolio/preti-home/projetos_relacionados.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
 												<h3 class="project__title">Preti Home</h3>
@@ -255,7 +251,7 @@
 							<div class="project__container">
 								<div class="project__img-holder">
 									<a href="thomaz.html">
-										<img src="img/portfolio/thomaz/Projetos relacionados@3x.png" alt="" class="project__img">
+										<img src="img/portfolio/thomaz/projeto_relacionados.png" alt="" class="project__img">
 										<div class="hover-overlay">
 											<div class="project__description">
 												<h3 class="project__title">Thomaz</h3>
